# openMVG

./: .gitignore
longsight/: README.md
longsight/Agent/: .gitignore  README.md  capture.cpp  go.mod  go.sum
longsight/Agent/dto/: codec.go  dto.go
longsight/Agent/fs/: download.go  upload.go
longsight/Agent/mq/: consumer.go  producer.go
longsight/Agent/public/: index.html
longsight/Agent/public/js/: index.js
longsight/Agent/util/: strconv.go
longsight/CV/: CMakeLists.txt
longsight/CV/include/viennacv/core/: image.hpp  image_enum.hpp  image_filter.hpp
longsight/CV/src/: CMakeLists.txt  blas2.cpp  image_test.cpp
longsight/FS/: .gitignore  README.md  docker-compose.yml
longsight/NSQ/: README.md  docker-compose.yml
longsight/NSQ/assets/: NSQ.md
